# audioplayer

./: BigKnobSlider.qml  CMakeLists.txt  FileView.qml  Info.plist  Main.qml  MsgToolButton.qml  RadioView.qml  SettingsView.qml  filelistmodel.cpp  filelistmodel.h  initvaluesmodel.cpp  initvaluesmodel.h  main.cpp  main.qrc  qtquickcontrols2.conf  stationlistmodel.cpp  stationlistmodel.h
scripts/: addFavorite.mjs  countryrequest.mjs  tagrequest.mjs
translations/: i18n_de.ts  i18n_en.ts
